<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- This layout defines the desired size -->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="320dp"
        android:orientation="vertical">

        <!-- Ordinal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:labelFor="@+id/iwOrdinalOutput"
                android:text="@string/iwOrdinal"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="end"


                android:textColor="@color/colorTextBlack"
                android:background="@color/colorScreenBackground"
                />
            <TextView
                android:id="@id/iwOrdinalOutput"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="75"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorGray"
                />

        </LinearLayout>

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:labelFor="@+id/iwTitleOutput"
                android:text="@string/title_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="end"
               

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorScreenBackground"
                />
            <TextView
                android:id="@id/iwTitleOutput"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="75"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorGray"
                />

        </LinearLayout>

        <!-- Latitude / Northing -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/iwLatLabel"
                android:labelFor="@+id/iwLatDD"
                android:text="@string/iw_latitude_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="end"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorScreenBackground"
                />

            <TextView
                android:id="@+id/iwLatDD"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"

                android:gravity="center"
                android:layout_marginEnd="@dimen/row_between_fields_margin"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorWhite"

                />

        </LinearLayout>

        <!-- Longitude / Easting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/iwLngLabel"
                android:labelFor="@+id/iwLngDD"
                android:text="@string/iw_longitude_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="end"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorScreenBackground"
                />

            <!-- Latitude  70 -->
            <TextView
                android:id="@id/iwLngDD"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"

                android:gravity="center"
                android:layout_marginEnd="@dimen/row_between_fields_margin"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorWhite"

                />

        </LinearLayout>

        <!-- Elevation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:labelFor="@+id/iwElevationOutput"
                android:text="@string/iw_elevation_label"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="end"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorScreenBackground"
                />
            <TextView
                android:id="@id/iwElevationOutput"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="75"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorGray"
                />

        </LinearLayout>

        <!-- Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/iwDescriptionOutput"

                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="75"

                android:textColor="@color/colorTextBlack"
                android:background="@color/colorGray"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>